Fix nav background blur on Safari. You just think you're so special, don't you Apple?

--- a/assets/scss/partials/_nav.scss
+++ b/assets/scss/partials/_nav.scss
@@ -6,6 +6,7 @@
 .nav {
   position: fixed;
   background: transparent;
+  -webkit-backdrop-filter: blur(15px);
   backdrop-filter: blur(15px);
   top: 0;
   left: 0;
